[package]
name = "broken_access_control"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
dashmap = "5"                                      # Great for concurrent, lock-free hashmap access

# 
# Dependencies for the client (client.rs)
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
serde_json = "1.0"
